import { useState } from 'react';
import { expect, fn, userEvent, within } from 'storybook/test';
import preview from '.storybook/preview';
import { formatReactSource } from '.storybook/utils/sourceTransformers';
import { Card } from 'src/components/card';
import { Checkbox } from 'src/components/checkbox';
import { Fieldset } from 'src/components/fieldset';
import { Heading } from 'src/components/typography/heading';
import { Switch } from './Switch';

const meta = preview.meta({
  component: Switch,
  tags: ['digdir'],
  parameters: {
    componentOrigin: {
      originator: 'digdir',
      details: 'Vi har fjernet mulighet for fargevalg.',
    },
    layout: 'centered',
  },
});

export const Preview = meta.story({
  args: {
    label: 'En bryter',
    onChange: fn(),
  },
  render: (args) => <Switch {...args} />,
  play: async ({ canvasElement, step, args }) => {
    const canvas = within(canvasElement);
    const toggleSwitch = canvas.getByRole('switch');

    await step('Switch is rendered and initially off', async () => {
      expect(toggleSwitch).toBeInTheDocument();
      expect(toggleSwitch).not.toBeChecked();
    });

    await step('User can toggle the switch on and off', async () => {
      await userEvent.click(toggleSwitch);
      expect(toggleSwitch).toBeChecked();
      await userEvent.click(toggleSwitch);
      expect(toggleSwitch).not.toBeChecked();
    });

    await step('Check keyboard toggle', async () => {
      toggleSwitch.focus();
      await userEvent.keyboard(' ');
      expect(toggleSwitch).toBeChecked();
      await userEvent.keyboard(' ');
      expect(toggleSwitch).not.toBeChecked();
    });

    await step(
      'onChange callback is called when switch is toggled',
      async () => {
        await userEvent.click(toggleSwitch);
        expect(args.onChange).toHaveBeenCalled();
      },
    );
  },
});

export const Checked = meta.story({
  ...Preview.input,
  args: { ...Preview.input.args, defaultChecked: true },
  play: () => {
    // Do nothing
  },
});

export const Description = meta.story({
  args: {
    label: 'Åpen prøve',
    description: 'Prøven er åpen for alle som ønsker å delta.',
    defaultChecked: true,
    id: 'switch-with-description',
  },
  render: (args) => <Switch {...args} />,
});

export const Group = meta.story({
  render: ({ ...args }) => (
    <Fieldset>
      <Fieldset.Legend>Varsler</Fieldset.Legend>
      <Switch
        label="Lydvarsler"
        description="Spill av lyd når et varsel mottas."
        value="lydvarsler"
        defaultChecked
        {...args}
      />
      <Switch
        label="Popup-varsler"
        description="Vis popup-varsler på skjermen."
        value="popup-varsler"
        {...args}
      />
      <Switch
        label="E-postvarsler"
        description="Tillat e-postvarsler for viktige oppdateringer."
        value="email-varsler"
        {...args}
      />
    </Fieldset>
  ),
});

export const Outline = Group.extend({
  args: {
    variant: 'outline',
  },
});

export const GroupEnd = meta.story({
  args: {
    position: 'end',
  },
  render: (args) => (
    <Fieldset>
      <Fieldset.Legend>
        <Heading level={2}>Innstillinger</Heading>
      </Fieldset.Legend>
      <Fieldset.Description>
        Innstillinger som gjelder hele systemet.
      </Fieldset.Description>
      <Switch label="Mørk modus" value="mork-modus" defaultChecked {...args} />
      <Switch
        label="Automatiske oppdateringer"
        value="automatiske-oppdateringer"
        {...args}
      />
    </Fieldset>
  ),
});

export const Controlled = meta.story({
  render: (args) => {
    const [lydvarsler, setLydvarsler] = useState(false);
    const [epostvarsler, setEpostvarsler] = useState(true);
    const [popupvarsler, setPopupvarsler] = useState(false);
    const anyChecked = lydvarsler || epostvarsler || popupvarsler;
    const handleSwitchChange = (e: React.ChangeEvent<HTMLInputElement>) => {
      const checked = e.target.checked;
      setLydvarsler(checked);
      setEpostvarsler(checked);
      setPopupvarsler(checked);
    };
    return (
      <Fieldset>
        <Fieldset.Legend>
          <Heading level={2}>Innstillinger</Heading>
        </Fieldset.Legend>
        <Switch {...args} checked={anyChecked} onChange={handleSwitchChange} />
        <Fieldset.Description>
          Velg hvilke typer varsler du ønsker å motta.
        </Fieldset.Description>
        <Checkbox
          label="Lydvarsler"
          checked={lydvarsler}
          onChange={(e) => setLydvarsler(e.target.checked)}
        />
        <Checkbox
          label="Epostvarsler"
          checked={epostvarsler}
          onChange={(e) => setEpostvarsler(e.target.checked)}
        />
        <Checkbox
          label="Popup-varsler"
          checked={popupvarsler}
          onChange={(e) => setPopupvarsler(e.target.checked)}
        />
      </Fieldset>
    );
  },
  args: {
    label: 'Varsler',
    id: 'controlled-switch',
  },
  parameters: {
    docs: { source: { type: 'code', transform: formatReactSource } },
  },
});

export const Disabled = meta.story({
  args: { label: 'Disabled switch', disabled: true, id: 'disabled-switch' },
});

export const ReadOnly = meta.story({
  args: { label: 'Read-only switch', readOnly: true, id: 'readonly-switch' },
});

export const Focused = Preview.extend({
  args: { id: 'focused-switch' },
  parameters: {
    pseudo: {
      focusVisible: true,
    },
  },
  play: undefined,
});

export const SwitchInColorContext = meta.story({
  args: {
    label: 'Radio',
    description: 'Description',
    defaultChecked: true,
    id: 'switch-in-color-context',
  },
  render: (args) => (
    <Card data-color="accent" variant="tinted">
      <Switch {...args} />
    </Card>
  ),
  play: async ({ canvasElement, step }) => {
    await step(
      'Should have neutral color palette by default, no matter the surrounding color palette',
      async () => {
        const element = within(canvasElement).getByRole('switch');
        const expectedColor = getComputedStyle(element).getPropertyValue(
          '--ds-color-neutral-base-default',
        );
        await expect(element).toHaveStyle(`background-color: ${expectedColor}`);
      },
    );
  },
});
