// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checked 1`] = `
<ds-field data-clickdelegatefor="<generated>">
  <input
    role="switch"
    type="checkbox"
    checked
    id="<generated>"
  >
  <label
    data-weight="regular"
    for="<generated>"
  >
    En bryter
  </label>
</ds-field>
`;

exports[`Controlled 1`] = `
<fieldset aria-labelledby="<generated>">
  <legend id="<generated>">
    <h2>
      Innstillinger
    </h2>
  </legend>
  <ds-field data-clickdelegatefor="controlled-switch">
    <input
      role="switch"
      id="controlled-switch"
      type="checkbox"
      checked
    >
    <label
      data-weight="regular"
      for="controlled-switch"
    >
      Varsler
    </label>
  </ds-field>
  <p>
    Velg hvilke typer varsler du ønsker å motta.
  </p>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Lydvarsler
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      checked
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Epostvarsler
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Popup-varsler
    </label>
  </ds-field>
</fieldset>
`;

exports[`Description 1`] = `
<ds-field data-clickdelegatefor="switch-with-description">
  <input
    role="switch"
    id="switch-with-description"
    type="checkbox"
    checked
    aria-describedby="<generated>"
  >
  <label
    data-weight="regular"
    for="switch-with-description"
  >
    Åpen prøve
  </label>
  <div
    data-field="description"
    id="<generated>"
  >
    Prøven er åpen for alle som ønsker å delta.
  </div>
</ds-field>
`;

exports[`Disabled 1`] = `
<ds-field data-clickdelegatefor="disabled-switch">
  <input
    role="switch"
    disabled
    id="disabled-switch"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="disabled-switch"
  >
    Disabled switch
  </label>
</ds-field>
`;

exports[`Focused 1`] = `
<ds-field data-clickdelegatefor="focused-switch">
  <input
    role="switch"
    id="focused-switch"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="focused-switch"
  >
    En bryter
  </label>
</ds-field>
`;

exports[`Group 1`] = `
<fieldset aria-labelledby="<generated>">
  <legend id="<generated>">
    Varsler
  </legend>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      role="switch"
      type="checkbox"
      value="lydvarsler"
      checked
      id="<generated>"
      aria-describedby="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Lydvarsler
    </label>
    <div
      data-field="description"
      id="<generated>"
    >
      Spill av lyd når et varsel mottas.
    </div>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      role="switch"
      type="checkbox"
      value="popup-varsler"
      id="<generated>"
      aria-describedby="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Popup-varsler
    </label>
    <div
      data-field="description"
      id="<generated>"
    >
      Vis popup-varsler på skjermen.
    </div>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      role="switch"
      type="checkbox"
      value="email-varsler"
      id="<generated>"
      aria-describedby="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      E-postvarsler
    </label>
    <div
      data-field="description"
      id="<generated>"
    >
      Tillat e-postvarsler for viktige oppdateringer.
    </div>
  </ds-field>
</fieldset>
`;

exports[`Group End 1`] = `
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    <h2>
      Innstillinger
    </h2>
  </legend>
  <p id="<generated>">
    Innstillinger som gjelder hele systemet.
  </p>
  <ds-field
    data-position="end"
    data-clickdelegatefor="<generated>"
  >
    <input
      role="switch"
      type="checkbox"
      value="mork-modus"
      checked
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Mørk modus
    </label>
  </ds-field>
  <ds-field
    data-position="end"
    data-clickdelegatefor="<generated>"
  >
    <input
      role="switch"
      type="checkbox"
      value="automatiske-oppdateringer"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Automatiske oppdateringer
    </label>
  </ds-field>
</fieldset>
`;

exports[`Outline 1`] = `
<fieldset aria-labelledby="<generated>">
  <legend id="<generated>">
    Varsler
  </legend>
  <ds-field
    data-variant="outline"
    data-clickdelegatefor="<generated>"
  >
    <input
      role="switch"
      type="checkbox"
      value="lydvarsler"
      checked
      id="<generated>"
      aria-describedby="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Lydvarsler
    </label>
    <div
      data-field="description"
      id="<generated>"
    >
      Spill av lyd når et varsel mottas.
    </div>
  </ds-field>
  <ds-field
    data-variant="outline"
    data-clickdelegatefor="<generated>"
  >
    <input
      role="switch"
      type="checkbox"
      value="popup-varsler"
      id="<generated>"
      aria-describedby="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Popup-varsler
    </label>
    <div
      data-field="description"
      id="<generated>"
    >
      Vis popup-varsler på skjermen.
    </div>
  </ds-field>
  <ds-field
    data-variant="outline"
    data-clickdelegatefor="<generated>"
  >
    <input
      role="switch"
      type="checkbox"
      value="email-varsler"
      id="<generated>"
      aria-describedby="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      E-postvarsler
    </label>
    <div
      data-field="description"
      id="<generated>"
    >
      Tillat e-postvarsler for viktige oppdateringer.
    </div>
  </ds-field>
</fieldset>
`;

exports[`Preview 1`] = `
<ds-field data-clickdelegatefor="<generated>">
  <input
    role="switch"
    type="checkbox"
    id="<generated>"
  >
  <label
    data-weight="regular"
    for="<generated>"
  >
    En bryter
  </label>
</ds-field>
`;

exports[`Read Only 1`] = `
<ds-field data-clickdelegatefor="readonly-switch">
  <input
    role="switch"
    readonly
    id="readonly-switch"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="readonly-switch"
  >
    Read-only switch
  </label>
</ds-field>
`;

exports[`Switch In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <ds-field data-clickdelegatefor="switch-in-color-context">
    <input
      role="switch"
      id="switch-in-color-context"
      type="checkbox"
      checked
      aria-describedby="<generated>"
    >
    <label
      data-weight="regular"
      for="switch-in-color-context"
    >
      Radio
    </label>
    <div
      data-field="description"
      id="<generated>"
    >
      Description
    </div>
  </ds-field>
</div>
`;
